var fixes - improved output